--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chatgpt4",
+  "name": "chatgptbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,10 @@
   "author": "Sam Ennis",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/rest": "^1.6.0",
     "discord.js": "^14.8.0",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "sequelize": "^6.30.0",
+    "sqlite3": "^5.1.6"
   }
 }
